# CCTVAI

./: README.md  pyproject.toml
src/cctvai/: __init__.py  cli.py  config.py  pipeline.py  storage.py
src/cctvai/analytics/: face.py
src/cctvai/detectors/: base.py  behaviour.py  yolo.py
src/cctvai/streaming/: manager.py
src/cctvai/web/: app.py  dashboard.html
